--- a/TIL/1.기본_타입과변수.md
+++ b/TIL/1.기본_타입과변수.md
@@ -1,6 +1,6 @@
 <br>
 
-#### 1. 파이썬 기본 - 타입 & 변수
+#### 2. 파이썬 기본 - 타입 & 변수
 
 <br>
 
@@ -20,6 +20,27 @@
 - `str`: 문자열(`'hello','bye',...`)
 - `bool` : `True`,`False`
 
+### 타입의 변환 
+
+타입을 변환할 수 있는 함수가 내재되어 있기에 간단반 방법으로 타입을 변환가능하다.
+변환시키고 싶은 타입의 형식으로 감싸 주면 타입이 바뀌게 된다.
+
+```py
+i = 60
+type( i )      # int 타입
+f = float( i ) # float 타입으로 변환
+print( f )     # 42.0으로 출력
+type( f )      # float 타입
+
+
+s = '123'
+type(s)      # str 타입
+print(s + 1) # 문자열 + int -> 오류 => 타입이 다른 변수에 대해 연산
+
+iv = int(s)
+type(iv)      # int 타입
+print(iv + 1) # int 타입 간 연산이기 때문에 오류 발생안함 -> 124로 출력됨
+```
 
 ### None
 
@@ -241,6 +262,9 @@ print(box)
 
 - 파이썬 코딩도장 &nbsp; : &nbsp;<https://dojang.io/> <br>
 - 핵심만 간단히, 파이썬 &nbsp; : &nbsp;<https://wikidocs.net/13876> <br>
+- 부스트코스 - 모두를 위한 프로그래밍 : 파이썬 &nbsp; : &nbsp;<https://www.edwith.org/pythonforeverybody/> <br>
+
+- List of Keywords in Python &nbsp; : &nbsp;<https://www.programiz.com/python-programming/keyword-list> <br>
 
 <br>
 <br>
