후 일단 저장

--- a/TIL/Day03(1).md
+++ b/TIL/Day03(1).md
@@ -8,15 +8,127 @@
 
 <br>
 
-## 1.
+## 1. R 프로그래밍 작업 환경 만들기 
 
-### 소제목
-
-#### 소소제목 
-
-내용
+- R 과 R studio 설치 
 
 <br>
+
+### [R install](https://ftp.harukasan.org/CRAN/)<br>
+
+<br>
+
+1. R 사이트 접속한다. ->  https://www.r-project.org/ 
+2. Download 의 CRAN 클릭하여 한국 서버 url 클릭하면 설치파일을 받을 수 있다.  (나라는 자신에게 맞는걸로)
+3. 운영체제 선택한다. -> 자신의 운영체제와 버전에 맞게 선택한다. 
+4. 설치 파일을 다운로드 한 후, 다운로드 받은 파일을 마우스 오른쪽 / 관리자 권한으로 실핼한다.  
+
+<br><br>
+
+### [R studio install](https://rstudio.com/products/rstudio/download/#download)<br>
+
+<br>
+
+1. R studio 사이트 접속한다. ->   https://rstudio.com/
+2. products 에서 Free rstudio desktop 선택한다.
+3. 윈도우 버전으로 설정한다.
+4. 한글 인코딩은 `utf-8`으로 설정한다.
+- `tools -> global options -> code -> saving` 에서 `utf-8` 선택한다. 
+
+<br><br>
+
+
+## 2. 스크립트 창에 있는 프로그램 실행하기
+
+<br>
+
+### 코드 실행하기
+
+<br>
+
+한줄만 실행 
+- `"Run"` 혹은 `ctrl + enter`
+
+여러줄 실행 
+- 마우스로 여러줄 선택 후 `"Run"` 혹은 `ctrl + enter`
+
+전체 실행  
+- `"source"-"source with Echo"` 혹은 `ctrl + shift + enter`
+
+<br>
+
+```r
+# test
+str(cars)  # 데이터 구조, 변수 개수, 변수 명, 관찰치 개수, 관찰치의 미리보기
+plot(cars) # 그래프 
+cars       # 실행하기
+```
+
+<br><br>
+
+### 작업 디렉토리 지정하기 
+<br>
+
+사용자가 지정한 디렉토리(폴더)에 데이터 파일을 저장하는 방법이다. <br>
+파이썬의 `os`패키지의 일부 기능과 동일하다. 
+
+<br>
+
+```r
+# test
+getwd()         # 현재 작업 디렉토리를 보여준다. 
+setwd('c:/r')   # 자신이 원하는 곳으로 지정 가능하다. 
+```
+<br>
+
+### 라이브러리 설치 및 사용
+
+<br>
+
+#### 라이브러리(패키지)
+
+라이브러리를 설치(하드디스크에 저장)하고, 불러오고 갱신하고 삭제 가능하다. 
+
+<br>
+
+- 라이브러리 설치 : `install.packages("ggplot2")`
+- 라이브러리 삭제 : `remove.packages("ggplot2")`
+- 라이브러리 갱신 : `update.packages("ggplot2")`
+
+<br>
+
+R은 패키지를 설치하고 불러와야한다. `import` 과 유사하다고 보면 된다. 
+
+<br>
+
+- 라이브러리 불러오기/ 호출하기 :  `library(ggplot2)`
+- 호출된 라이브러리 목록 확인   :  `search()`
+
+<br>
+
+### library 와 require의 차이
+
+library() 명령어로 라이브러리를 불러올 때 라이브러리가 없으면 오류가 나지만 require는 라이브러리가 없어도 그냥 무시한다는 차이가 있다.
+
+<br><br>
+
+
+## 3. R 패키지 정리 
+
+<br>
+
+### 데이터 로드 
+
+- RMySQL, RPostgresSQL, RSLite 
+
+
+```r
+
+```
+
+<br>
+
+### 데이터 핸들링 
 
 ```r
 
@@ -25,42 +137,21 @@
 <br>
 
 
+### 데이터 시각화 
 
-
-## 2.
-
-<br>
-
-```py
+```r
 
 ```
 
 <br>
 
+### 데이터 모델링 
 
-
-## 3.
-
-<br>
-
-```py
+```r
 
 ```
 
 <br>
-
-
-
-## 4.
-
-<br>
-
-```py
-
-```
-
-<br>
-
 
 
 
@@ -73,11 +164,11 @@
 
 ## Reference <br>
 
-- 파이썬 코딩도장 &nbsp; : &nbsp;<https://dojang.io/> <br>
-
+- R VScode install  &nbsp; : &nbsp;<https://ark1st.tistory.com/7> <br>
+- R 패키지 참조  &nbsp; : &nbsp;<https://statkclee.github.io/data-science/data-science-library.html><br>
 <br>
 <br>
 
 ## Practice makes perfect! <br>
 
-- [내용](주소)
+<!-- - [내용](주소) -->
