--- a/TIL/Day03(2).md
+++ b/TIL/Day03(2).md
@@ -4,17 +4,46 @@
 
 <br>
 
-# R 프로그래밍
+# R 프로그래밍 (실습)
 
 <br>
 
-## 1.
+## 1. 데이터형과 연산 
 
-### 소제목
+### 변수
 
-#### 소소제목 
+### 데이터 형
 
-내용
+### 연산자 
+
+### 벡터 
+
+
+`:`와  `c()`를 이용하여 주어진 인수로 벡터를 생성가능하다. 
+`seq()`을 이용하면 순차적으로 벡터를 이용가능하다. 
+`rep()` 은 반복적이 벡터를 생성 가능하다. 
+
+```r
+# 0~10까지 2씩 증가하는 코드 
+seq(from=0, to=10, by=2) 
+seq(0, 10, 2) 
+
+# 벡터 단위 반복
+rep(c(1:10), times = 2)
+
+# 개별 반복 
+rep(c(1:10), each = 2)
+```
+
+### 배열 
+
+### 데이터 프레임 
+
+### 리스트 
+
+
+
+
 
 <br>
 
@@ -27,11 +56,72 @@
 
 
 
-## 2.
+## 2. 데이터 취득과 정제
 
 <br>
 
-```py
+### 파일 읽고 쓰기 
+대부분의 데이터는 파일 형태로 존재한다. 
+
+
+<br>
+
+```r
+
+```
+
+<br>
+
+
+### 데이터 정제를 위한 조건문과 반복문
+
+
+<br>
+
+```r
+
+```
+
+
+[참조](https://freshrimpsushi.tistory.com/528)
+
+[참조-ifelse](https://data-make.tistory.com/43)
+
+
+<br>
+
+
+
+### 사용자 정의 함수
+
+
+<br>
+
+```r
+
+```
+
+<br>
+
+
+### 데이터 정제 예제 : 결측값 처리 
+
+<br>
+
+```r
+
+```
+
+<br>
+
+
+
+### 데이터 정제 예제 : 이상값 처리 
+
+
+<br>
+
+```r
 
 ```
 
