--- a/주로사용하는코드/경로.md
+++ b/주로사용하는코드/경로.md
@@ -28,8 +28,16 @@
 <br>
 
 ```py
+# 데이터 경로 
+glob.glob(os.getcwd()+"/data"+"/*")
+# ['C:\\stock/data\\상장법인목록.xls']
 
+
+# 경로 내에 데이터 리스트 
+os.listdir(os.getcwd()+"/data")
+# ['상장법인목록.xls']
 ```
+
 
 <br>
 
