오늘자 수업

--- a/src/제목가지고 오기.ipynb
+++ b/src/제목가지고 오기.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,7 @@
     "# 크롤링\n",
     "import requests\n",
     "import urllib.request\n",
+    "import lxml.html\n",
     "\n",
     "from bs4 import BeautifulSoup\n",
     "from urllib.request import urlopen\n",
@@ -52,6 +53,35 @@
    "source": [
     "# pip install selenium"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'http://cslee.co.kr/performance.html'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "respon = requests.get(url)\n",
+    "root = lxml.html.fromstring(respon.content)\n",
+    "\n",
+    "for a in root.cssselect('#prj_2019 '):\n",
+    "    print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
