--- a/수업 내용 정리 필요/Day03(2).md
+++ b/수업 내용 정리 필요/Day03(2).md
@@ -4,19 +4,211 @@
 
 <br>
 
-# R 프로그래밍 (실습)
+# R 프로그래밍 - 데이터형과 연산 
 
 <br>
 
-## 1. 데이터형과 연산 
+## 1. 변수
 
-### 변수
 
-### 데이터 형
+- 데이터 저장공간 
+- `=, <-, ->` 을 이용해 값을 대입한다.
 
-### 연산자 
 
-### 벡터 
+```R
+x <- 1 # 변수에 1을 할당
+
+x <- x + 1 # 변수를 일정한 값만큼 증가
+```
+
+<br>
+
+### 변수이름의 규칙 *
+
+1. 대소문자의 구분이 가능하다.
+2. 특수문자는 **불가능**하다. 
+3. 밑줄이나 마침표 기호는 **가능**하다.
+4. 변수이름의 **첫글자로 숫자나 밑줄은 불가능**하다. 
+5. for, if 같은 **예약어**로 변수의 이름을 짓는것 역시 불가능하다.  
+
+
+```R
+### 변수 이름 명명 규칙중 하나이다. 에러가 발생하지 않도록 수정해라!
+
+_UnderbarUseIt <- 10 
+_UnderbarUseIt
+
+# 수정안 
+Underbar_Use_It <- 10 
+Underbar_Use_It
+
+3NumberUseIt <- 10 
+3NumberUseIt
+
+# 수정안 
+Number0Use0It <- 10 
+Number0Use0It
+
+for <- 10
+for 
+
+# 수정안 
+UseFor <- 10
+UseFor 
+```
+
+<br><br>
+
+
+## 2. 데이터 형
+
+<br>
+
+### 2-1. 기본 데이터형
+
+- 데이터형을 지정하지 않고, 변수에 어떤값을 지정하느냐에 따라 데이터형이 결정
+- 숫자형 , 문자형, 범주형, 논리형, 특수상수 등 ..
+
+|데이터형|종류|
+|:--:|:--|
+|숫자형 | 정수 , 실수, 복소수 |
+|문자형 | 작은 따옴표나 큰따옴표로 묶어서 표기 |
+|범주형 | `factor` : 레벨(level)에 따라 분류된 형태 |
+|논리형 | `True`(T), `False`(F) |
+|특수상수| `NULL` : 정의되지 않은 값, `NA` : 결측값 |
+|| `lnf`(음의무한대) / `lnf`(양의무한대), `NaN `: `0/0`, `lnf/lnf`등과 같이 연산 불가능한 값 표시 | <br>
+
+<br>
+
+- 특수 상수는 올바르게 구분을 하는것이 중요하다. 
+
+<br>
+
+### 2-2. 데이터형 확인 함수 
+
+|함수(func)|설명|
+|:--:|:--|
+|class(x)| R 객체지향 관점에서 x의 데이터형|
+|typeof(x)| R 언어 관점에서 x의 데이터형 |
+|is.integer(x) | x 가 **정수형**이면 `True` , 아니면 `False` |
+|is.numeric(x) | x 가 **실수형**이면 `True` , 아니면 `False` |
+|is.complex(x) | x 가 **복소수형**이면 `True` , 아니면 `False`|
+|is.character(x) | x 가 **문자형**이면 `True` , 아니면 `False` |
+|is.na(x) | x 가 **NA**이면 `True` , 아니면 `False`|
+
+<br>
+
+```R
+x <- 1
+is.integer(x) # numeric # 정수취급이 안된다.
+# is.numeric(x) 
+
+### 데이터 형 변환을 해보자 
+x <- as.integer(x) # 데이터 형변환 
+x
+is.integer(x)
+
+x <- 1.8L
+is.integer(x)  # 에러발생 : integer literal 1.8L contains decimal; using numeric value
+
+x <- 1L # x에 1L을 입력한 경우 x는 정수형 ,  x에 단순히 1을 넣은 경우 x는 숫자형
+is.integer(x) # integer
+
+a <- "Hello world!"
+is.character(a)
+
+### 데이터형 변환을 해보자 
+# as.factor(a)[c(1)]
+
+b <- 3.14i
+is.complex(b) # 복소수형(complex) : 실수 + 허수
+
+n <- NA
+is.na(n)
+```
+
+<br>
+
+### 2-3. 데이터형 변환 함수 
+
+|함수(func)|설명|
+|:--:|:--|
+|as.factor(x)  | x 가 **범주형**으로 변환 |
+|as.integer(x) | x 가 **정수형**으로 변환 |
+|as.numeric(x) | x 가 **숫자형**으로 변환 |
+|as.character(x)| x 가 **문자형**으로 변환|
+|as.matrix(x)   | x 가 **행렬**로 변환  |
+|as.array(x)    | x 가 **배열**로 변환  |  
+
+<br>
+
+```R
+# x에 1을 as.integer 함수로 변환하여 입력한 경우 x는 정수형
+x <- as.integer(1) 	 
+x
+is.integer(x)
+```
+
+<br><br>
+
+## 3. 연산자 
+
+<br>
+
+### 3-1. 산술연산자
+
+
+|연산자|설명|예|
+|:--:|:--|:--|
+|`+`          | 덧셈   |`3+2`|
+|`-`          | 뺄셈   |`3-2`|
+|`*`          | 곱셈   |`3*2`|
+|`/`          | 나눗셈 |`3/2`|
+|`^` 또는 `**`| 지수승 |`3^2`|
+|`x%%y`       | 나머지 |`3%%2`|
+|`x%/%y`      | 나눈몫 |`3%/%2`|
+
+<br>
+
+### 3-2. 비교, 논리연산자
+
+
+|연산자|설명|예|
+|:--:|:--|:--|
+|`+`          | 덧셈   |`5<5`|
+|`-`          | 뺄셈   |`5<=5`|
+|`*`          | 곱셈   |`5>5`|
+|`/`          | 나눗셈 |`5>=5`|
+|`^` 또는 `**`| 지수승 |`5==5`|
+|`x%%y`       | 나머지 |`5!=5`|
+|`x%/%y`      | 나눈몫 |`!TRUE`|
+|`x%/%y`      | 나눈몫 |`TRUE | FALSE`|
+|`x%/%y`      | 나눈몫 |`TRUE & FALSE`|
+|`x%/%y`      | 나눈몫 |`isTRUE(TRUE)`|
+
+<br>
+
+### 3-3. 연산자 우선 순위 
+
+---
+
+1. 지수승이 가장 높다.
+2. 단항의 플러스마이너스
+3. `%%`,`%/%` 연산자
+4. 곱셈, 나눗셈
+5. 덧셈, 뺄셈
+6. 비교연산자
+7. 논리 부전
+8. 논리 and (`&`, `&&`)
+9. 논리 or (`|`, `||`)
+
+---
+
+<br><br>
+
+
+## 4. 벡터 
+- 단일값들의 모임 
 
 
 `:`와 `c()`를 이용하여 주어진 인수로 벡터를 생성가능하다. 
@@ -35,12 +227,24 @@ rep(c(1:10), times = 2)
 rep(c(1:10), each = 2)
 ```
 
-### 배열 
+<br><br>
 
-### 데이터 프레임 
 
-### 리스트 
+## 5. 배열 
+- 열과 행을 가지는 데이터 집합 
 
+<br>
+
+## 6. 데이터 프레임 
+- 서로다른 데이터 형이 표의 형태로 정리된 구조
+
+<br>
+
+
+## 7. 리스트 
+- 표의형태의 구조. 각 속성의 크기가 달라도 된다.  
+
+<br>
 
 
 
@@ -52,105 +256,6 @@ rep(c(1:10), each = 2)
 ```
 
 <br>
-
-
-
-
-## 2. 데이터 취득과 정제
-
-<br>
-
-### 파일 읽고 쓰기 
-대부분의 데이터는 파일 형태로 존재한다. 
-
-
-<br>
-
-```r
-
-```
-
-<br>
-
-
-### 데이터 정제를 위한 조건문과 반복문
-
-
-<br>
-
-```r
-
-```
-
-
-[참조](https://freshrimpsushi.tistory.com/528)
-
-[참조-ifelse](https://data-make.tistory.com/43)
-
-
-<br>
-
-
-
-### 사용자 정의 함수
-
-
-<br>
-
-```r
-
-```
-
-<br>
-
-
-### 데이터 정제 예제 : 결측값 처리 
-
-<br>
-
-```r
-
-```
-
-<br>
-
-
-
-### 데이터 정제 예제 : 이상값 처리 
-
-
-<br>
-
-```r
-
-```
-
-<br>
-
-
-
-## 3.
-
-<br>
-
-```py
-
-```
-
-<br>
-
-
-
-## 4.
-
-<br>
-
-```py
-
-```
-
-<br>
-
 
 
 
