--- a/주로사용하는코드/1.기초_Pandas.md
+++ b/주로사용하는코드/1.기초_Pandas.md
@@ -6,6 +6,8 @@
 
 # 데이터 관리 
 
+주로 쓰는 인코딩 `euc-kr, utf-8, CP949, utf-8-sig`
+
 <br>
  
 ## 1.  데이터 확인 
@@ -172,7 +174,121 @@ CatList.to_csv('C:/data/%s.csv'% f'Camp', index=False, mode='w', encoding='utf-8
 
 ```
 
+<br><br>
+
+
+
+## 4. 여러개 문자를 기준으로 문자열 자르기 
+
 <br>
+
+### 정규식을 이용하는 방법 - 1 
+
+- re.findall(pattern, string, flags=0)을 쓰는 방법
+
+```py
+
+import re
+DATA = "Hey, you - what are you doing here!?"
+print re.findall(r"[\w']+", DATA)
+# Prints ['Hey', 'you', 'what', 'are', 'you', 'doing', 'here']
+
+```
+<br>
+
+
+### 정규식을 이용하는 방법 - 2
+
+- re.split(pattern, string[, maxsplit=0])을 쓰는 방법
+
+```py
+
+import re
+DATA = "Hey, you - what are you doing here!?"
+print re.split('\W+', DATA) # ['Hey', 'you', 'what', 'are', 'you', 'doing', 'here', '']
+
+```
+<br>
+
+
+### replace()한 후 split()하는 방법
+
+```py
+
+'a;bcd,ef g'.replace(';',' ').replace(',',' ').split() = ['a', 'bcd', 'ef', 'g']
+
+```
+
+<br><br>
+
+
+
+## 엑셀 데이터 시트 여러개 일때 출력 
+
+```py
+
+# 데이터 시트 여러개 일때 출력 
+sheet_Name = [
+    '2015 부산 강수량', '2016 부산 강수량',
+    '2017 부산 강수량', '2018 부산 강수량',
+    '2019 부산 강수량', '2020 부산 강수량' ]
+
+
+def read_exel(xlse_path, sheet_Name) :
+    exel_file = pd.ExcelFile(xlse_path)
+    data = exel_file.parse(sheet_Name)
+    return data
+
+# data = read_exel(data_path, sheet_Name[])
+
+```
+
+<br><br>
+
+
+## 널값 확인 및 제거 - 1
+
+```py
+
+# 일단 info()로 전체적으로 확인
+
+# 결측값 합 확인 
+데이터프레임.isnull().sum()
+
+```
+
+
+<br>
+
+
+## 널값 확인 및 제거 - 2
+
+```py
+
+cols_info = {
+            'patient_id': '환자 ID',
+            'sex': '성별',
+            'age': '나이',
+            'country': '국적'}
+
+# 결측확인 
+for col in df.columns:
+    print(f'{cols_info[col]} = ', df[col].isnull().sum())
+
+
+
+# 결측 비율화
+for col in df.columns:
+    percent = df[col].isnull().sum() / df[col].shape[0]
+    msg = 'column: {:>20}\t Percent of NaN value: {:.2f}%'.format(col, 100 * (percent))
+    print(msg)
+
+
+```
+
+<br><br>
+
+
 
 
 <br>
@@ -183,7 +299,7 @@ CatList.to_csv('C:/data/%s.csv'% f'Camp', index=False, mode='w', encoding='utf-8
 
 ## Reference <br>
 
-<!-- - 파이썬 코딩도장 &nbsp; : &nbsp;<https://dojang.io/> <br> -->
+- 파이썬 코딩도장 &nbsp; : &nbsp;<https://hashcode.co.kr/questions/493/%EC%97%AC%EB%9F%AC%EA%B0%9C-%EB%AC%B8%EC%9E%90%EB%A5%BC-%EA%B8%B0%EC%A4%80%EC%9C%BC%EB%A1%9C-%EB%AC%B8%EC%9E%90%EC%97%B4%EC%9D%84-%EC%9E%90%EB%A5%B4%EB%8A%94-%EB%B0%A9%EB%B2%95%EC%9D%B4-%EC%9E%88%EB%82%98%EC%9A%94> <br>
 
 <br>
 <br>
