--- a/주로사용하는코드/1.기초Pandas_데이터.md
+++ b/주로사용하는코드/1.기초Pandas_데이터.md
@@ -184,6 +184,74 @@ CatList.to_csv('C:/data/%s.csv'% f'Camp', index=False, mode='w', encoding='utf-8
 <br>
 
 
+
+
+<br>
+
+## 4. 데이터 병합 
+
+<br>
+
+판다스와 for 문을 이용해 데이터 병합
+
+```py
+
+
+
+```
+
+<br>
+
+
+
+<br>
+
+## 4. 데이터 병합 
+
+<br>
+
+판다스와 for 문을 이용해 데이터 병합
+
+```py
+
+
+
+```
+
+<br>
+
+
+
+
+<br>
+
+## 4. 데이터 병합 
+
+<br>
+
+판다스와 for 문을 이용해 데이터 병합
+
+```py
+
+
+
+```
+
+<br>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <br>
 
 ---
